--- a/StudentEF/StudentEF/Models/Database/DepartmentDB.tt
+++ b/StudentEF/StudentEF/Models/Database/DepartmentDB.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@ 
  output extension=".cs"#><#
 
-const string inputFile = @"StudentDB.edmx";
+const string inputFile = @"DepartmentDB.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
