--- a/StudentEF/StudentEF/Views/Shared/_Layout.cshtml
+++ b/StudentEF/StudentEF/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Students", "Index", "Student")</li>
+                    <li>@Html.ActionLink("Deparments", "Index", "Department")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
                 </ul>
