--- a/ECommerce/ECommerce/Views/Cart/ViewCart.cshtml
+++ b/ECommerce/ECommerce/Views/Cart/ViewCart.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>ViewCart</h2>
-<body>
+<div>
 
     <h3>Cart Page</h3>
     <table cellpadding="2" cellspacing="2" border="1">
@@ -38,5 +38,4 @@
     <br>
     <a href="@Url.Action("Index", "Product")">Continue Shopping</a>
 
-</body>
-</html>
+</div>
